syntax = "proto3";

option csharp_namespace = "GRpcTest.GRpcTodo";

package grpcTest.grpcTodo;

service Todo {
  rpc GetTodos(GetTodosMessage) returns (GetTodosReply);
}

message GetTodosMessage {};

message TodoMessage {
  uint32 Priority = 1;
  string Date = 2;
  string Description = 3;
}

message GetTodosReply {
  repeated TodoMessage Todos = 1;
}
