syntax = "proto3";

option csharp_namespace = "GRpcTest.GRpcWeather";

package grpcTest.grpcWeather;

service Weather {
  rpc Temperature(LocationMessage) returns (TemperatureReply);
}

message LocationMessage {
  string name = 1;
}

message TemperatureReply {
  int32 Celsius = 1;
  int32 Fahrenheit = 2;
  int32 Kelvin = 3;
}
